Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18024

Explorer: Right-click the start button and select open. Assertion hit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • None

    Description

      1. Right-click the start button.
      2. Choose [Open].
      3. Assertion failure happens (sdk/lib/atl/atlcom.h, Line 111, m_dwRef > 0).

      atlcom-Line111-m_dwRef-greater-than-zero-0.4.15-dev-3733-g974a0f0.png The screenshot.
      log.txt The log.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              2 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: