[EXPLORER] Fix assertion failure on start button (#4581)

CORE-18024